--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Inria Sans';
-    src: url('/Sinodeep/fonts/subset-InriaSans-Regular.woff2') format('woff2'),
-        url('/Sinodeep/fonts/subset-InriaSans-Regular.woff') format('woff');
+    src: url('/fonts/subset-InriaSans-Regular.woff2') format('woff2'),
+        url('/fonts/subset-InriaSans-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -15,7 +15,7 @@ body {
 
 
 .container {
-    max-width: 1400px;
+    max-width: 1430px;
     margin: 0 auto;
     position: relative;
     padding-left: 0;
@@ -29,27 +29,31 @@ section {
 h1 {
     font-size: 96px;
     font-weight: 400;
+    line-height: 1.2em;
 }
 
 h2 {
     font-size: 64px;
     font-weight: 400;
+    line-height: 1.2em;
 }
 
 h3 {
     font-size: 24px;
     font-weight: 400;
-
+    line-height: 1.3em;
 }
 
 h4 {
     font-size: 16px;
     font-weight: 400;
+    line-height: 1.2em;
 }
 
 p {
     font-size: 16px;
     font-weight: 400;
+    line-height: 1.2em;
 }
 
 @media (max-width: 1300px) {
@@ -117,11 +121,9 @@ p {
 
 .navbar {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
-
-
 
 .navbar__logo {
     font-size: 24px;
@@ -135,20 +137,18 @@ p {
 
 .navbar__links {
     display: flex;
-    align-items: center;
-
 }
 
 .navbar__link {
     color: #000000;
     text-decoration: none;
-    margin-left: 30px;
     font-size: 16px;
     font-weight: 400;
     display: inline-block;
     outline: none;
-    padding: 30px;
+    padding: 15px 20px 0;
 }
+
 .navbar__link::after {
     content: "";
     display: block;
@@ -163,10 +163,14 @@ p {
 .navbar__link:hover::after,
 .navbar__link:focus::after {
     transform: scaleX(1);
-
-
 }
-.navbar__contact {
+
+.navbar__right {
+    display: flex;
+    align-items: center;
+}
+
+/* .navbar__contact {
     display: flex;
     align-items: center;
 }
@@ -183,21 +187,15 @@ p {
 .navbar__social-icon img {
     width: 39px;
     height: 39px;
-}
-
+} */
 
 .line {
-    display: block; 
+    display: block;
     width: 80%;
     height: 1px;
     background-color: black;
-    margin: 0 auto; 
+    margin: 0 auto;
 }
-
-/* .navbar__right {
-    display: flex;
-    align-items: center;
-} */
 
 .language-switcher {
     background: none;
@@ -218,6 +216,7 @@ p {
     height: 39px;
     object-fit: contain;
 }
+
 .burger-btn {
     background-color: transparent;
     border: none;
@@ -283,12 +282,10 @@ p {
     background: #295D70;
     color: white;
     cursor: pointer;
-    border: 1px solid;
-    border-color: #1c4c5e;
-    border-radius: 30px;
-    padding: 15px 25px;
+    border-radius: 40px;
+    padding: 25px 35px;
     font-size: 22px;
-    font-weight: 400;
+    font-weight: 100;
     border: none;
     transition: all 0.3s ease-in-out;
 }
@@ -350,7 +347,7 @@ p {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    filter: grayscale(100%) brightness(0.7);
+    filter: grayscale(100%) brightness(1);
     transition: all 0.3s ease;
 }
 
@@ -389,93 +386,69 @@ p {
 
 
 /* ----------- Help Section ------------ */
-.help {
-    color: #000000;
-    border-top: 1px solid black;
-    border-radius: 80px;
-    padding-top: 100px;
-    margin-top: 50px;
-}
-
-.help-container {
-    display: flex;
-    width: 1426px;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-
 .help-title {
-    padding-bottom: 30px;
-    /* font-size: 64px;
-    line-height: 68px;
-    font-weight: 400; */
-}
-
-.help__item {
-    padding: 25px;
-    border: 1px solid;
-    border-color: #000000;
-    border-radius: 25px;
-    margin-bottom: 30px;
-}
-
-.help__item--horizontal {
-    padding: 30px;
-    border: 1px solid;
-    border-color: #000000;
-    border-radius: 25px;
-    margin-bottom: 30px;
-
-
-}
-
-.help__item2 {
-    padding: 35px;
-    background-color: #295D70;
-    color: white;
-    border: 1px solid;
-    border-color: #1c4c5e;
-    border-radius: 25px;
-    margin-bottom: 30px;
+    padding-bottom: 50px;
 }
 
 .help__item-title {
     margin-bottom: 30px;
 }
 
-@media (max-width: 1300px) {
-    .help__item {
-        padding: 20px;
-        margin-left: 15px;
+.services-flex {
+    display: flex;
+    gap: 30px;
+    margin-bottom: 30px;
+}
+
+.service-card {
+    padding: 40px;
+    border-radius: 25px;
+    border: 1px solid #000000;
+}
+
+.service-card.highlighted {
+    background-color: #295D70;
+    color: #fff;
+    border: none;
+}
+
+/* Адаптивность: настройки для планшетов (пример: ширина до 1024px) */
+@media (max-width: 1024px) {
+    .services-grid {
+        grid-template-columns: repeat(4, 1fr);
+        /* уменьшаем количество колонок до 4 */
     }
 
-    .help__item--horizontal {
-        padding: 25px;
-        margin-left: 15px;
-
+    .service-card {
+        grid-column: span 2;
+        /* по умолчанию карточка занимает 2 из 4 колонок (2 карточки в ряду) */
     }
 
-    .help__item2 {
-        padding: 30px;
-        margin-left: 15px;
+    /* Хаотичное расположение на планшете:
+       некоторые карточки растягиваем на всю ширину (4 колонки), 
+       чтобы сохранить «рваный» рисунок сетки */
+    .service-card:nth-child(3),
+    .service-card:nth-child(6) {
+        grid-column: span 4;
+        /* 3-я и 6-я карточки на планшете тянутся на всю ширину ряда */
+    }
+
+    /* Если последняя карточка осталась одиноко в ряду, пусть она тоже тянется на всю ширину */
+    .service-card:last-child:nth-child(odd) {
+        grid-column: span 4;
     }
 }
 
-@media (max-width: 945px) {
-    .help__item {
-        padding: 20px;
-        margin-left: 15px;
+/* Адаптивность: мобильные устройства (пример: ширина до 600px) */
+@media (max-width: 600px) {
+    .services-grid {
+        grid-template-columns: 1fr;
+        /* одна колонка - карточки в столбик */
     }
 
-    .help__item--horizontal {
-        padding: 25px;
-        margin-left: 15px;
-
-    }
-
-    .help__item2 {
-        padding: 30px;
-        margin-left: 15px;
+    .service-card {
+        grid-column: span 1;
+        /* каждая карточка занимает единственную колонку (полную ширину) */
     }
 }
 
@@ -490,12 +463,11 @@ p {
 
 .extra--help-cards {
     position: relative;
-    max-width: 1400px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, auto);
-    column-gap: 70px;
-    row-gap: 30px;
+    column-gap: 40px;
+    row-gap: 40px;
     margin: 0 auto;
     width: 100%;
     box-sizing: border-box;
@@ -505,11 +477,6 @@ p {
     border: 1px solid black;
     border-radius: 25px;
     transition: transform 0.3s ease;
-}
-
-.extra--help-card:focus,
-.extra--help-card:hover {
-    transform: translateY(-1px);
 }
 
 .extra--help-content {
@@ -554,7 +521,7 @@ p {
     height: auto;
     object-fit: contain;
     border-radius: 25px;
-    filter: grayscale(100%) brightness(0.7);
+    filter: grayscale(100%) brightness(1);
     transition: all 0.3s ease;
 }
 
@@ -567,101 +534,117 @@ p {
 }
 
 .extra--help-content-text {
-    padding: 0 20px;
+    padding: 0 30px;
 }
 
-@media (max-width: 1300px){
+@media (max-width: 1300px) {
     .extra_image {
         width: 1233px;
         height: 212px;
 
     }
-    .extra--help-card{
+
+    .extra--help-card {
         margin-left: 15px;
         margin-right: 15px;
     }
 }
 
-@media (max-width: 1280px){
+@media (max-width: 1280px) {
     .extra_image {
         width: 1200px;
         height: 212px;
 
     }
-    .extra--help-card{
+
+    .extra--help-card {
         margin-left: 15px;
         margin-right: 15px;
     }
 }
-@media (max-width: 1200px){
+
+@media (max-width: 1200px) {
     .extra_image {
         width: 1144px;
         height: 212px;
 
     }
-    .extra--help-card{
+
+    .extra--help-card {
         margin-left: 15px;
         margin-right: 15px;
     }
 }
+
 @media (max-width: 1135px) {
-    .extra--help-content{
+    .extra--help-content {
         display: flex;
         justify-content: center;
         flex-direction: column;
     }
-    .extra--help-card{
+
+    .extra--help-card {
         margin-left: 15px;
         margin-right: 15px;
     }
+
     .extra_image {
         width: 1110px;
         height: 190px;
 
     }
 }
+
 @media (max-width: 1040px) {
-    .extra--help-content{
+    .extra--help-content {
         display: flex;
         justify-content: center;
         flex-direction: column;
     }
-    .extra--help-card{
+
+    .extra--help-card {
         margin-left: 15px;
         margin-right: 15px;
     }
+
     .extra_image {
         width: 990px;
         height: 190px;
 
     }
 }
+
 @media (max-width: 960px) {
-    .extra--help-content{
+    .extra--help-content {
         display: flex;
         justify-content: center;
         flex-direction: column;
     }
-    .extra--help-card{
+
+    .extra--help-card {
         margin-left: 15px;
         margin-right: 15px;
     }
+
     .extra_image {
         width: 900px;
         height: 190px;
 
     }
 }
+
 @media (max-width: 900px) {
-    .extra--help-content{
+    .extra--help-content {
         display: flex;
         justify-content: center;
         flex-direction: column;
     }
-    .extra--help-card{
+
+    .extra--help-card {
         margin-left: 15px;
         margin-right: 15px;
     }
+
     .extra_image {
         width: 860px;
         height: 146px;
@@ -672,9 +655,9 @@ p {
 
 /*---------------------Extra help--------------*/
 
-/*---------------------Quality description--------------*/
+/*---------------------Solution Dev--------------*/
 .solution-dev {
-    background-image: url("/Sinodeep/lib/dev-lines.svg");
+    background-image: url("/lib/dev-lines.svg");
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
@@ -685,12 +668,8 @@ p {
 
 
 .solution-dev__title {
-    margin-bottom: 40px;
+    margin-bottom: 50px;
     margin-top: -240px;
-}
-
-.solution-dev__subtitle {
-    margin-bottom: 60px;
 }
 
 .solution-dev-list {
@@ -721,7 +700,7 @@ p {
     color: white;
 }
 
-/*---------------------Quality description--------------*/
+/*---------------------Solution Dev--------------*/
 
 /*---------------------Quality description--------------*/
 
@@ -735,7 +714,7 @@ p {
 
 .quality-row-text {
     position: relative;
-    padding-bottom: 40px;
+    padding-bottom: 60px;
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
@@ -822,7 +801,7 @@ p {
 
 /*---------------------Financial Operation--------------*/
 .fin-operation {
-    background-image: url("/Sinodeep/lib/waveCurve.svg");
+    background-image: url("/lib/waveCurve.svg");
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
@@ -882,11 +861,6 @@ p {
     transition: transform 0.3s ease;
 }
 
-.logic-card:focus,
-.logic-card:hover {
-    transform: translateY(-1px);
-}
-
 .logic-content-column {
     display: flex;
     flex-direction: column;
@@ -922,6 +896,10 @@ p {
     height: 413px;
 }
 
+.logic-card1 img{
+    height: 412px;
+}
+
 .logic-card3 {
     grid-column: 1 / 3;
     grid-row: 2 / 3;
@@ -940,6 +918,12 @@ p {
     height: 497px;
 }
 
+.logic-card5 img{
+    height: 495px;
+}
+
+
+
 .logic_image {
     width: auto;
     height: auto;
@@ -954,7 +938,7 @@ p {
 }
 
 .logic-content-text {
-    padding: 20px;
+    padding: 30px;
 }
 
 .logistics-delivery-text {
@@ -968,6 +952,48 @@ p {
 }
 
 /*---------------------Logistics--------------*/
+
+/*---------------------Quality description--------------*/
+.portfolio__title {
+    margin-bottom: 60px;
+}
+
+.portfolio-cards {
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    column-gap: 58px;
+    margin: 0 auto;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.portfolio-card {
+    border: 1px solid black;
+    border-radius: 25px;
+    width: auto !important;
+    transition: transform 0.3s ease;
+}
+
+.portfolio-card1 {
+    border: none;
+}
+
+.portfolio-card1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+}
+.portfolio-card2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    padding: 35px;
+}
+
+.portfolio-content-text {
+    padding-bottom: 30px;
+}
+
+/*---------------------Quality description--------------*/
 
 /*---------------------Why choose--------------*/
 .choose-title {
@@ -994,7 +1020,7 @@ p {
 
 /* ----------- How we work Section ------------ */
 .workPlan {
-    background-image: url("/Sinodeep/lib/roadCar.svg");
+    background-image: url("/lib/roadCar.svg");
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
@@ -1035,51 +1061,37 @@ p {
 
 .process1 {
     grid-column: 1 / 2;
-    /* Ось X: 1-2 */
     grid-row: 2 / 3;
-    /* Ось Y: 1-2 */
 }
 
 .process2 {
     grid-column: 1 / 2;
-    /* Ось X: 1-2 */
     grid-row: 2 / 3;
-    /* Ось Y: 1-2 */
 }
 
 .process3 {
     grid-column: 2 / 3;
-    /* Ось X: 1-2 */
     grid-row: 1 / 2;
-    /* Ось Y: 1-2 */
 }
 
 .process4 {
     grid-column: 2 / 3;
-    /* Ось X: 1-2 */
     grid-row: 1 / 2;
-    /* Ось Y: 1-2 */
 }
 
 .process5 {
     grid-column: 3 / 4;
-    /* Ось X: 1-2 */
     grid-row: 2 / 3;
-    /* Ось Y: 1-2 */
 }
 
 .process6 {
     grid-column: 3 / 4;
-    /* Ось X: 1-2 */
     grid-row: 2 / 3;
-    /* Ось Y: 1-2 */
 }
 
 .process7 {
     grid-column: 4 / 5;
-    /* Ось X: 1-2 */
     grid-row: 1 / 2;
-    /* Ось Y: 1-2 */
 }
 
 
@@ -1098,21 +1110,23 @@ p {
 }
 
 .step-content {
-    padding: 20px 25px;
+    padding: 15px 35px;
     border: #000000 solid 1px;
-    border-radius: 80px;
+    border-radius: 60px;
     width: 100%;
     max-width: 300px;
     text-align: center;
 }
 
-
+.process-text {
+    line-height: normal;
+}
 
 /* ----------- How we work Section ------------ */
 
 /* ----------- Form Section ------------ */
 .form {
-    background-image: url("/Sinodeep/lib/waveCurve.svg");
+    background-image: url("/lib/waveCurve.svg");
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
@@ -1184,7 +1198,7 @@ p {
     border: 1px solid white;
     background: transparent;
     border-radius: 100px;
-    font-size: 16px;
+    font-size: 24px;
     transition: all 0.3s ease;
 }
 
@@ -1192,8 +1206,9 @@ p {
     position: absolute;
     left: 25px;
     margin-top: 20px;
-    color: white;
+    color: rgba(255, 255, 255, 0.702);
     pointer-events: none;
+    font-size: 24px;
     transition: all 0.4s ease-in-out;
     background: transparent;
 }
@@ -1322,7 +1337,12 @@ p {
 
 .agreement-text {
     opacity: 0.7;
-    transition: opacity 0.3s ease;
+    transition: all 0.3s ease-in-out;
+}
+
+.agreement-text:hover,
+.agreement-text:focus {
+    text-decoration: underline;
 }
 
 .checkbox-input:checked~.agreement-text {
@@ -1372,8 +1392,8 @@ p {
 
 .partner-card {
     flex: 0 0 auto;
-    width: 200px;
-    height: 100px;
+    width: auto;
+    height: auto;
     margin: 0 10px;
     display: flex;
     align-items: center;
@@ -1385,11 +1405,10 @@ p {
 }
 
 .partner-card img {
-    max-width: 160px;
-    max-height: 80px;
     width: auto;
     height: auto;
     object-fit: contain;
+    padding: 7px 50px;
 }
 
 @keyframes scroll {
@@ -1530,12 +1549,12 @@ footer {
 .img-footer img {
     max-width: 400px;
     margin-top: 60px;
- margin-left: 120px;
+    margin-left: 120px;
 }
 
 .footer-info {
     margin-top: 20px;
- 
+
 }
 
 .footer-title-link {
@@ -1607,28 +1626,33 @@ footer {
     color: white;
     text-decoration: underline;
 }
-.messagers{
+
+.messagers {
     margin-top: 20px;
 }
-.messenger-item1{
-   padding: 5px;
+
+.messenger-item1 {
+    padding: 5px;
 
 }
-.contact-link{
+
+.contact-link {
     display: flex;
     justify-content: space-around;
 }
-.footer-links{
+
+.footer-links {
     margin-top: 50px;
 }
-.link-adress{
+
+.link-adress {
     display: flex;
     flex-direction: row;
     margin-top: 15px;
 }
 
 @media (max-width: 1024px) {
-    .img-footer img{
+    .img-footer img {
         margin-top: 50px;
     }
 }
