--- a/css/style.css
+++ b/css/style.css
@@ -831,7 +831,14 @@ p {
     padding-bottom: 10px;
     line-height: 1.5
 }
-
+@media (max-width: 1030px) {
+    .operation-links{
+        padding-left: 2px;
+    }
+    .fin-operation__title{
+        margin-left: 10px;
+    }
+}
 /*---------------------Financial Operation--------------*/
 
 /*---------------------Logistics--------------*/
@@ -1015,7 +1022,31 @@ p {
     margin-bottom: 25px;
     font-weight: bold;
 }
+@media (max-width: 1124px) {
 
+    .advantages{
+        padding: 30px;
+    }
+    }
+    
+    @media (max-width: 1000px) {
+    
+        .advantages{
+            padding: 30px;
+        }
+        }
+    
+     @media (max-width: 870px) {
+    
+            .advantages{
+                padding: 30px;
+            }
+            .choose__item{
+            flex-direction: row;
+            gap: 17px;
+            align-items: flex-start;
+        }
+            }
 /*---------------------Why choose--------------*/
 
 /* ----------- How we work Section ------------ */
@@ -1468,6 +1499,7 @@ p {
     position: relative;
     cursor: pointer;
     margin-left: 31px;
+    padding: 30px;
 }
 
 .questioncard>label::after,
@@ -1529,130 +1561,699 @@ p {
     font-weight: 400;
 }
 
+@media (max-width: 1025px) {
+    .questioncard>label {
+        margin-left: 15px;
+        font-size: 23px;
+    }
+
+    .question__hidden {
+        font-size: 23px;
+    }
+}
+
+@media (max-width: 980px) {
+    .questioncard>label {
+        margin-left: 15px;
+        font-size: 22px;
+    }
+
+    .question__hidden {
+        font-size: 22px;
+    }
+}
+
+@media (max-width: 970px) {
+    .questioncard>label {
+        margin-left: 15px;
+        font-size: 21px;
+    }
+
+    .question__hidden {
+        font-size: 21px;
+    }
+}
+
+@media (max-width: 920px) {
+    .questioncard>label {
+        margin-left: 15px;
+        font-size: 19px;
+    }
+
+    .question__hidden {
+        font-size: 19px;
+    }
+}
+
+@media (max-width: 870px) {
+    .questioncard>label {
+        margin-left: 15px;
+        font-size: 18px;
+        white-space: pre-line;
+
+    }
+
+    .question__hidden {
+        font-size: 18px;
+    }
+
+
+}
+
+@media (max-width: 815px) {
+    .questioncard>label {
+        margin-left: 15px;
+        font-size: 18px;
+        white-space: pre-line;
+
+
+    }
+
+    .question__hidden {
+        font-size: 18px;
+    }
+
+
+}
+
+@media (max-width: 750px) {
+    .questioncard>label {
+        margin-left: 15px;
+        font-size: 17px;
+        white-space: pre-line;
+
+
+    }
+
+    .question__hidden {
+        font-size: 17px;
+    }
+
+
+}
+
+@media (max-width: 720px) {
+    .questioncard>label {
+        margin-left: 15px;
+        font-size: 16px;
+        white-space: pre-line;
+        padding: 20px;
+
+
+    }
+
+    .question__hidden {
+        font-size: 16px;
+    }
+
+
+}
+
+@media (max-width: 670px) {
+    .questioncard>label {
+        margin-left: 15px;
+        font-size: 16px;
+        white-space: pre-line;
+        padding: 17px;
+
+
+    }
+
+    .question__hidden {
+        font-size: 16px;
+    }
+
+    .questioncard {
+        width: 588px;
+
+    }
+
+
+}
+
+@media (max-width: 640px) {
+    .questioncard>label {
+
+        margin-left: 15px;
+        font-size: 16px;
+        white-space: pre-line;
+        padding: 17px;
+
+
+    }
+
+    .question__hidden {
+        font-size: 16px;
+    }
+
+    .questioncard {
+        width: 573px;
+
+    }
+
+
+
+}
+
+@media (max-width: 600px) {
+    .questioncard>label {
+
+        margin-left: 15px;
+        font-size: 15px;
+        white-space: pre-line;
+        padding: 12px;
+
+
+    }
+
+    .question__hidden {
+        font-size: 15px;
+    }
+
+    .questioncard {
+        width: auto;
+
+    }
+
+
+
+}
+
+@media (max-width: 585px) {
+    .questioncard>label {
+
+        margin-left: 15px;
+        font-size: 14px;
+        white-space: pre-line;
+        padding: 10px;
+
+
+    }
+
+    .question__hidden {
+        font-size: 14px;
+    }
+
+    .questioncard {
+        width: auto;
+
+    }
+
+
+
+}
+@media (max-width: 565px) {
+    .questioncard>label {
+
+        margin-left: 15px;
+        font-size: 14px;
+        white-space: pre-line;
+        padding: 10px;
+
+
+    }
+
+    .question__hidden {
+        font-size: 14px;
+    }
+
+    .questioncard {
+        width: 443px;
+
+    }
+
+    .questioncard>label::after,
+    .questioncard>label::before {
+        background-color: #c8e8c300;
+
+
+    }
+}
+    @media (max-width: 485px) {
+        .questioncard>label {
+
+            margin-left: 15px;
+            font-size: 14px;
+            white-space: pre-line;
+            padding: 10px;
+
+
+        }
+
+        .question__hidden {
+            font-size: 14px;
+        }
+
+        .questioncard {
+            width: 325px;
+
+        }
+
+        .questioncard>label::after,
+        .questioncard>label::before {
+            background-color: #c8e8c300;
+
+
+        }
+        .name-question{
+            margin-left: 0px;
+        }
+    
+    }
+    @media (max-width: 395px){
+        .name-question {
+            margin-left: 0px;
+            font-size: 53px;
+        }
+        .questioncard {
+            width: 280px;
+
+        }
+    }
+    @media (max-width: 360px) {
+        .questioncard>label {
+
+            margin-left: 15px;
+            font-size: 14px;
+            white-space: pre-line;
+            padding: 10px;
+
+
+        }
+
+        .question__hidden {
+            font-size: 14px;
+        }
+
+        .questioncard {
+            width: 260px;
+
+        }
+
+        .questioncard>label::after,
+        .questioncard>label::before {
+            background-color: #c8e8c300;
+
+        }
+
+        .name-question {
+            margin-left: 0px;
+        }
+
+    }
+
 /*---------------Questions--------------------*/
 
 /* ----------------- footer --------------------- */
-footer {
-    background: #4B4B4B;
-    color: white;
+    /* Основные стили футера */
+    footer {
+        background-color: #4B4B4B;
+        color: #FFFFFF;
+        padding: 50px 0;
+    }
 
-}
+    .footer__container {
+        max-width: 1200px;
+        margin: 0 auto;
+        /* padding: 0 20px; */
+    }
 
-.footer__container {
-    max-width: 1400px;
-    margin: 0 auto;
-    padding-top: 30px;
-    padding-bottom: 30px;
-}
+    .footer-content {
+        display: flex;
+        gap: 60px;
+    }
 
+    /* Блок с логотипом */
+    .footer-logo {
+        flex: 0 0 250px;
 
-.img-footer img {
-    max-width: 400px;
-    margin-top: 60px;
-    margin-left: 120px;
-}
+    }
 
-.footer-info {
-    margin-top: 20px;
+    .logo-img {
+        width: 400px;
+        height: 400px;
+        border-radius: 4px;
+        margin-left: -55px;
 
-}
+    }
 
-.footer-title-link {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 30px;
-}
+    /* Правый блок контента */
+    .footer-right {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+    }
 
-.footer-title {
-    font-size: 18px;
-    font-weight: 400;
-    margin-bottom: 10px;
-    padding-right: 20px;
-}
+    /* Навигационное меню */
+    .footer-nav {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 25px;
+        margin-bottom: 40px;
+    }
 
-.footer-title:hover {
-    color: rgb(200, 200, 200);
-}
+    .footer-link {
+        color: #FFFFFF;
+        text-decoration: none;
+        font-size: 18px;
+        transition: color 0.3s;
+    }
 
-.footer-contacts-link {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    margin-top: 80px;
-    padding-left: 25px;
-}
+    .footer-link:hover {
+        color: #CCCCCC;
+    }
 
-.footer-contacts {
-    margin-bottom: 20px;
-}
-
-.footer-contacts-title {
-    font-size: 24px;
-    padding-bottom: 15px;
-    padding-left: 25px;
-
-}
-
-.messager-link {
-    margin-left: 140px;
-    font-size: 24px;
-}
-
-.footer-botton-link {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-}
-
-.footer-bottom {
-    margin-top: 30px;
-}
-
-.btn-primary {
-    background-color: #1c4c5e;
-    color: white;
-    border: 1px solid #1c4c5e;
-    border-radius: 30px;
-    padding: 15px 30px;
-}
-
-.policy-link {
-    color: #ffffffcc;
-    text-decoration: none;
-}
-
-.policy-link:hover {
-    color: white;
-    text-decoration: underline;
-}
-
-.messagers {
-    margin-top: 20px;
-}
-
-.messenger-item1 {
-    padding: 5px;
-
-}
-
-.contact-link {
-    display: flex;
-    justify-content: space-around;
-}
-
-.footer-links {
-    margin-top: 50px;
-}
-
-.link-adress {
-    display: flex;
-    flex-direction: row;
-    margin-top: 15px;
-}
-
-@media (max-width: 1024px) {
-    .img-footer img {
+    /* Блок контактов */
+    .footer-contacts {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 40px;
         margin-top: 50px;
     }
-}
+
+    .contacts-info {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .contact-item {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .contact-type {
+        font-size: 18px;
+    }
+
+    /* Блок мессенджеров */
+
+
+    .messengers-caption {
+        display: block;
+        font-size: 18px;
+        margin-bottom: 15px;
+    }
+
+    .messengers-list {
+        display: flex;
+        justify-content: flex-start;
+        gap: 15px;
+    }
+
+    .messenger-link img {
+        width: 50px;
+        height: 50px;
+        transition: transform 0.3s;
+    }
+
+    .messenger-link img:hover {
+        transform: scale(1.1);
+    }
+
+    /* Нижний блок с кнопкой */
+    .footer-actions {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 60px;
+    }
+
+    .consult-button {
+        background-color: #1C4C5E;
+        color: #FFFFFF;
+        border: none;
+        border-radius: 30px;
+        padding: 15px 30px;
+        font-size: 16px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+
+    .consult-button:hover {
+        background-color: #0F3545;
+    }
+
+    .privacy-policy {
+        color: rgba(255, 255, 255, 0.8);
+        text-decoration: none;
+        font-size: 14px;
+        transition: color 0.3s;
+    }
+
+    .privacy-policy:hover {
+        color: #FFFFFF;
+        text-decoration: underline;
+    }
+
+    /* Адаптивность */
+    @media (max-width: 1300px) {
+        .footer__container {
+            padding: 70px;
+        }
+
+        .footer-nav {
+            gap: 17px;
+            margin-bottom: 30px;
+        }
+
+    }
+
+    @media (max-width: 1180px) {
+        .footer__container {
+            padding: 30px 20px;
+            gap: 20px;
+        }
+
+        .footer-nav {
+            flex-direction: row;
+            align-items: flex-start;
+
+        }
+
+        .logo-img {
+            width: 328px;
+            height: 337px;
+            margin-left: 15px;
+        }
+
+        .footer-actions {
+            flex-direction: column;
+            gap: 20px;
+            align-items: flex-start;
+        }
+
+        .consult-button {
+            margin-top: -55px;
+            margin-left: 20px;
+            width: 525px;
+        }
+
+        .messenger-link img {
+            width: 30px;
+            height: 30px;
+            transition: transform 0.3s;
+        }
+    }
+
+    @media (max-width: 1000px) {
+        .footer__container {
+            padding: 30px 20px;
+            gap: 20px;
+        }
+
+        .footer-nav {
+            flex-direction: row;
+            gap: 35px;
+            align-items: flex-start;
+            margin-right: 63px;
+
+        }
+
+        .consult-button {
+            margin-top: -55px;
+            margin-left: 20px;
+            width: 550px;
+        }
+
+        .logo-img {
+            width: 309px;
+            height: 431px;
+            margin-top: -20px;
+        }
+    }
+
+    @media (max-width: 960px) {
+
+        .footer__container {
+            padding: 25px 10px;
+            gap: 20px;
+        }
+
+        .consult-button {
+            margin-top: -55px;
+            margin-left: 20px;
+            width: 440px;
+        }
+
+        .logo-img {
+            width: 347px;
+            height: 261px;
+            margin-top: 28px;
+        }
+    }
+    @media (max-width: 768px) {
+        .logo-img {
+            width: 820px;
+            height: 337px;
+            margin-top: -20px;
+        }
+    }
+    @media (max-width: 768px) {
+        .footer__container {
+            padding: 25px 10px;
+            gap: 20px;
+        }
+
+        .footer-content {
+            flex-direction: column;
+            gap: 30px;
+        }
+
+        .footer-logo {
+            flex: 1;
+            max-width: 200px;
+        }
+
+        .footer-nav {
+            gap: 10px;
+            margin-bottom: 30px;
+            justify-content: space-around;
+            margin-right: 0px;
+        }
+
+        .footer-contacts {
+            flex-direction: column;
+            gap: 30px;
+        }
+
+        .messengers-block {
+            text-align: left;
+        }
+
+        .messengers-list {
+            justify-content: flex-start;
+        }
+
+        .footer-actions {
+            flex-direction: column;
+            gap: 20px;
+            align-items: flex-start;
+        }
+
+        .logo-img {
+            width: 820px;
+            height: 337px;
+            margin-top: -20px;
+        }
+
+        .consult-button {
+            margin-top: -55px;
+            margin-left: 20px;
+            width: 525px;
+        }
+    }
+
+    @media (max-width: 540px) {
+        .consult-button {
+            margin-top: -55px;
+            margin-left: 20px;
+            width: 525px;
+        }
+    }
+
+    @media (max-width: 480px) {
+
+        .footer__container {
+            padding: 25px 10px;
+            gap: 20px;
+        }
+
+        .footer-link {
+            font-size: 15px;
+        }
+
+        .contact-text {
+            font-size: 15px;
+        }
+
+        .consult-btn {
+            padding: 10px 15px;
+            font-size: 14px;
+
+
+        }
+
+        .consult-button {
+            margin-top: -55px;
+            margin-left: 20px;
+            width: 360px;
+        }
+
+        .privacy-policy {
+            margin-left: 10px;
+        }
+
+        .logo-img {
+            width: 357px;
+            height: 337px;
+            margin-top: -20px;
+        }
+
+        .footer-nav {
+            flex-direction: row;
+            gap: 30px;
+            align-items: flex-start;
+        }
+    }
+
+    @media (max-width: 420px) {
+        .footer__container {
+            padding: 25px 10px;
+            gap: 20px;
+        }
+
+        .footer-nav {
+            flex-direction: row;
+            gap: 25px;
+            align-items: flex-start;
+        }
+    }
+
+    @media (max-width: 360px) {
+        .footer__container {
+            padding: 25px 10px;
+            gap: 20px;
+        }
+
+        .consult-button {
+            margin-top: -55px;
+            margin-left: 10px;
+            width: 331px;
+        }
+
+        .logo-img {
+            width: 295px;
+            height: 337px;
+            margin-top: -20px;
+        }
+
+        .footer-nav {
+            flex-direction: row;
+            gap: 17px;
+            align-items: flex-start;
+        }
+    }
+
